ASICParser.py
# Generated from ASICParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ASICParser ( Parser ):

    grammarFileName = "ASICParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'$0'", "'$1'", "'$2'", "'$3'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'['", "'<'", "']'", "'>'", "'{'", "'}'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'^'", "'&'", "'&&'", "'|'", "'||'", 
                     "'!'", "'~'", "'='", "'<<'", "'>>'", "'=='", "'!='", 
                     "'<='", "'>='", "'++'", "'--'", "','", "':'", "';'", 
                     "'.'", "'#'" ]

    symbolicNames = [ "<INVALID>", "HEXADECIMAL", "DECIMAL", "BINARY", "OCTAL", 
                      "R0", "R1", "R2", "R3", "ARG0", "ARG1", "ARG2", "ARG3", 
                      "V1", "V1H", "V2", "V3", "V4", "PROCCHAR", "DEFINE", 
                      "CONFIG", "CONST", "A1", "A4", "A5", "A128D", "DINV", 
                      "SD", "SC", "ID", "REV", "INV", "AND", "OR", "XOR", 
                      "NOT", "EOL", "LPAREN", "RPAREN", "LBRACKET", "LABRACKET", 
                      "RBRACKET", "RABRACKET", "LBRACE", "RBRACE", "PLUS", 
                      "MINUS", "STAR", "DIV", "MOD", "CARET", "AMP", "AMPAMP", 
                      "BAR", "BARBAR", "NEG", "TILDE", "ASSIGN", "LSHIFT", 
                      "RSHIFT", "EQUAL", "NEQUAL", "LEQUAL", "GEQUAL", "PLUSPLUS", 
                      "MINUSMINUS", "COMMA", "COLON", "SEMI", "DOT", "HASH", 
                      "V2N", "V4M", "FOR", "ENDFOR", "CMP", "OUT", "GEN", 
                      "EOP", "WAIT", "JNZ", "IDENTIFIER", "WS", "LINE_COMMENT" ]

    RULE_prog = 0
    RULE_line = 1
    RULE_forloop = 2
    RULE_endfor = 3
    RULE_definition = 4
    RULE_define_def = 5
    RULE_config_def = 6
    RULE_const_def = 7
    RULE_constant = 8
    RULE_statement = 9
    RULE_instruction = 10
    RULE_sregop = 11
    RULE_asignment = 12
    RULE_arith = 13
    RULE_operator = 14
    RULE_resultout = 15
    RULE_lbl = 16
    RULE_label = 17
    RULE_primary_expression = 18
    RULE_unary_expression = 19
    RULE_unary_operator = 20
    RULE_mulop = 21
    RULE_multiplicative_expression = 22
    RULE_addop = 23
    RULE_additive_expression = 24
    RULE_relop = 25
    RULE_relational_expression = 26
    RULE_eqop = 27
    RULE_equality_expression = 28
    RULE_and_expression = 29
    RULE_xor_expression = 30
    RULE_or_expression = 31
    RULE_logicaland_expression = 32
    RULE_logicalor_expression = 33
    RULE_expression = 34
    RULE_rev_configuration = 35
    RULE_configuration = 36
    RULE_conf_atom = 37
    RULE_conf_d = 38
    RULE_conf_c = 39
    RULE_const_expr = 40
    RULE_op = 41
    RULE_define_name = 42
    RULE_config_name = 43
    RULE_const_name = 44
    RULE_argument = 45
    RULE_resultexpr = 46
    RULE_sreg = 47
    RULE_arg = 48
    RULE_vreg = 49
    RULE_vreg_r = 50
    RULE_vreg_special = 51
    RULE_output = 52
    RULE_stdop = 53
    RULE_aluop = 54
    RULE_spcop = 55
    RULE_comment = 56

    ruleNames =  [ "prog", "line", "forloop", "endfor", "definition", "define_def", 
                   "config_def", "const_def", "constant", "statement", "instruction", 
                   "sregop", "asignment", "arith", "operator", "resultout", 
                   "lbl", "label", "primary_expression", "unary_expression", 
                   "unary_operator", "mulop", "multiplicative_expression", 
                   "addop", "additive_expression", "relop", "relational_expression", 
                   "eqop", "equality_expression", "and_expression", "xor_expression", 
                   "or_expression", "logicaland_expression", "logicalor_expression", 
                   "expression", "rev_configuration", "configuration", "conf_atom", 
                   "conf_d", "conf_c", "const_expr", "op", "define_name", 
                   "config_name", "const_name", "argument", "resultexpr", 
                   "sreg", "arg", "vreg", "vreg_r", "vreg_special", "output", 
                   "stdop", "aluop", "spcop", "comment" ]

    EOF = Token.EOF
    HEXADECIMAL=1
    DECIMAL=2
    BINARY=3
    OCTAL=4
    R0=5
    R1=6
    R2=7
    R3=8
    ARG0=9
    ARG1=10
    ARG2=11
    ARG3=12
    V1=13
    V1H=14
    V2=15
    V3=16
    V4=17
    PROCCHAR=18
    DEFINE=19
    CONFIG=20
    CONST=21
    A1=22
    A4=23
    A5=24
    A128D=25
    DINV=26
    SD=27
    SC=28
    ID=29
    REV=30
    INV=31
    AND=32
    OR=33
    XOR=34
    NOT=35
    EOL=36
    LPAREN=37
    RPAREN=38
    LBRACKET=39
    LABRACKET=40
    RBRACKET=41
    RABRACKET=42
    LBRACE=43
    RBRACE=44
    PLUS=45
    MINUS=46
    STAR=47
    DIV=48
    MOD=49
    CARET=50
    AMP=51
    AMPAMP=52
    BAR=53
    BARBAR=54
    NEG=55
    TILDE=56
    ASSIGN=57
    LSHIFT=58
    RSHIFT=59
    EQUAL=60
    NEQUAL=61
    LEQUAL=62
    GEQUAL=63
    PLUSPLUS=64
    MINUSMINUS=65
    COMMA=66
    COLON=67
    SEMI=68
    DOT=69
    HASH=70
    V2N=71
    V4M=72
    FOR=73
    ENDFOR=74
    CMP=75
    OUT=76
    GEN=77
    EOP=78
    WAIT=79
    JNZ=80
    IDENTIFIER=81
    WS=82
    LINE_COMMENT=83

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASICParser.LineContext)
            else:
                return self.getTypedRuleContext(ASICParser.LineContext,i)


        def getRuleIndex(self):
            return ASICParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ASICParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137442877920) != 0) or ((((_la - 71)) & ~0x3f) == 0 and ((1 << (_la - 71)) & 2047) != 0):
                self.state = 114
                self.line()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self):
            return self.getTypedRuleContext(ASICParser.DefinitionContext,0)


        def statement(self):
            return self.getTypedRuleContext(ASICParser.StatementContext,0)


        def forloop(self):
            return self.getTypedRuleContext(ASICParser.ForloopContext,0)


        def endfor(self):
            return self.getTypedRuleContext(ASICParser.EndforContext,0)


        def comment(self):
            return self.getTypedRuleContext(ASICParser.CommentContext,0)


        def getRuleIndex(self):
            return ASICParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = ASICParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 20, 21]:
                self.state = 120
                self.definition()
                pass
            elif token in [5, 6, 7, 8, 13, 14, 15, 16, 17, 37, 71, 72, 75, 76, 77, 78, 79, 80, 81]:
                self.state = 121
                self.statement()
                pass
            elif token in [73]:
                self.state = 122
                self.forloop()
                pass
            elif token in [74]:
                self.state = 123
                self.endfor()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==83:
                self.state = 126
                self.comment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForloopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(ASICParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(ASICParser.LPAREN, 0)

        def sreg(self):
            return self.getTypedRuleContext(ASICParser.SregContext,0)


        def COMMA(self):
            return self.getToken(ASICParser.COMMA, 0)

        def constant(self):
            return self.getTypedRuleContext(ASICParser.ConstantContext,0)


        def RPAREN(self):
            return self.getToken(ASICParser.RPAREN, 0)

        def getRuleIndex(self):
            return ASICParser.RULE_forloop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForloop" ):
                listener.enterForloop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForloop" ):
                listener.exitForloop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForloop" ):
                return visitor.visitForloop(self)
            else:
                return visitor.visitChildren(self)




    def forloop(self):

        localctx = ASICParser.ForloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_forloop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(ASICParser.FOR)
            self.state = 130
            self.match(ASICParser.LPAREN)
            self.state = 131
            self.sreg()
            self.state = 132
            self.match(ASICParser.COMMA)
            self.state = 133
            self.constant()
            self.state = 134
            self.match(ASICParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndforContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENDFOR(self):
            return self.getToken(ASICParser.ENDFOR, 0)

        def getRuleIndex(self):
            return ASICParser.RULE_endfor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndfor" ):
                listener.enterEndfor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndfor" ):
                listener.exitEndfor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndfor" ):
                return visitor.visitEndfor(self)
            else:
                return visitor.visitChildren(self)




    def endfor(self):

        localctx = ASICParser.EndforContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_endfor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(ASICParser.ENDFOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def define_def(self):
            return self.getTypedRuleContext(ASICParser.Define_defContext,0)


        def config_def(self):
            return self.getTypedRuleContext(ASICParser.Config_defContext,0)


        def const_def(self):
            return self.getTypedRuleContext(ASICParser.Const_defContext,0)


        def getRuleIndex(self):
            return ASICParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = ASICParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_definition)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.define_def()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.config_def()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.const_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Define_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(ASICParser.DEFINE, 0)

        def define_name(self):
            return self.getTypedRuleContext(ASICParser.Define_nameContext,0)


        def expression(self):
            return self.getTypedRuleContext(ASICParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ASICParser.RULE_define_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefine_def" ):
                listener.enterDefine_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefine_def" ):
                listener.exitDefine_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefine_def" ):
                return visitor.visitDefine_def(self)
            else:
                return visitor.visitChildren(self)




    def define_def(self):

        localctx = ASICParser.Define_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_define_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(ASICParser.DEFINE)
            self.state = 144
            self.define_name()
            self.state = 145
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONFIG(self):
            return self.getToken(ASICParser.CONFIG, 0)

        def config_name(self):
            return self.getTypedRuleContext(ASICParser.Config_nameContext,0)


        def configuration(self):
            return self.getTypedRuleContext(ASICParser.ConfigurationContext,0)


        def rev_configuration(self):
            return self.getTypedRuleContext(ASICParser.Rev_configurationContext,0)


        def getRuleIndex(self):
            return ASICParser.RULE_config_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig_def" ):
                listener.enterConfig_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig_def" ):
                listener.exitConfig_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig_def" ):
                return visitor.visitConfig_def(self)
            else:
                return visitor.visitChildren(self)




    def config_def(self):

        localctx = ASICParser.Config_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_config_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(ASICParser.CONFIG)
            self.state = 148
            self.config_name()
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 149
                self.configuration()
                pass

            elif la_ == 2:
                self.state = 150
                self.rev_configuration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(ASICParser.CONST, 0)

        def const_name(self):
            return self.getTypedRuleContext(ASICParser.Const_nameContext,0)


        def const_expr(self):
            return self.getTypedRuleContext(ASICParser.Const_exprContext,0)


        def getRuleIndex(self):
            return ASICParser.RULE_const_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_def" ):
                listener.enterConst_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_def" ):
                listener.exitConst_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_def" ):
                return visitor.visitConst_def(self)
            else:
                return visitor.visitChildren(self)




    def const_def(self):

        localctx = ASICParser.Const_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_const_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(ASICParser.CONST)
            self.state = 154
            self.const_name()
            self.state = 155
            self.const_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HEXADECIMAL(self):
            return self.getToken(ASICParser.HEXADECIMAL, 0)

        def DECIMAL(self):
            return self.getToken(ASICParser.DECIMAL, 0)

        def BINARY(self):
            return self.getToken(ASICParser.BINARY, 0)

        def OCTAL(self):
            return self.getToken(ASICParser.OCTAL, 0)

        def getRuleIndex(self):
            return ASICParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstant" ):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)




    def constant(self):

        localctx = ASICParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lbl(self):
            return self.getTypedRuleContext(ASICParser.LblContext,0)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASICParser.InstructionContext)
            else:
                return self.getTypedRuleContext(ASICParser.InstructionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ASICParser.COMMA)
            else:
                return self.getToken(ASICParser.COMMA, i)

        def getRuleIndex(self):
            return ASICParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ASICParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.lbl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==81:
                    self.state = 160
                    self.lbl()


                self.state = 174
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 163
                    self.instruction()
                    pass

                elif la_ == 2:
                    self.state = 164
                    self.instruction()
                    self.state = 165
                    self.match(ASICParser.COMMA)
                    self.state = 166
                    self.instruction()
                    pass

                elif la_ == 3:
                    self.state = 168
                    self.instruction()
                    self.state = 169
                    self.match(ASICParser.COMMA)
                    self.state = 170
                    self.instruction()
                    self.state = 171
                    self.match(ASICParser.COMMA)
                    self.state = 172
                    self.instruction()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sregop(self):
            return self.getTypedRuleContext(ASICParser.SregopContext,0)


        def operator(self):
            return self.getTypedRuleContext(ASICParser.OperatorContext,0)


        def getRuleIndex(self):
            return ASICParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = ASICParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_instruction)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 7, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.sregop()
                pass
            elif token in [13, 14, 15, 16, 17, 37, 71, 72, 75, 76, 77, 78, 79, 80]:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.operator()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SregopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignment(self):
            return self.getTypedRuleContext(ASICParser.AsignmentContext,0)


        def arith(self):
            return self.getTypedRuleContext(ASICParser.ArithContext,0)


        def getRuleIndex(self):
            return ASICParser.RULE_sregop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSregop" ):
                listener.enterSregop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSregop" ):
                listener.exitSregop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSregop" ):
                return visitor.visitSregop(self)
            else:
                return visitor.visitChildren(self)




    def sregop(self):

        localctx = ASICParser.SregopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sregop)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.asignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.arith()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sreg(self):
            return self.getTypedRuleContext(ASICParser.SregContext,0)


        def ASSIGN(self):
            return self.getToken(ASICParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ASICParser.ExpressionContext,0)


        def arg(self):
            return self.getTypedRuleContext(ASICParser.ArgContext,0)


        def getRuleIndex(self):
            return ASICParser.RULE_asignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignment" ):
                listener.enterAsignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignment" ):
                listener.exitAsignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignment" ):
                return visitor.visitAsignment(self)
            else:
                return visitor.visitChildren(self)




    def asignment(self):

        localctx = ASICParser.AsignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_asignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.sreg()
            self.state = 187
            self.match(ASICParser.ASSIGN)
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 37, 45, 46, 55, 56, 81]:
                self.state = 188
                self.expression()
                pass
            elif token in [9, 10, 11, 12]:
                self.state = 189
                self.arg()
                pass
            else:
                raise NoViableAltException(self)
